# OCR_Banking

./: .gitignore  CMakeLists.txt  README.md  run_windows_release.bat
config/: Control.csv  alias_dictionary.csv  app_config.json  field_dictionary.csv
src/: Models.h  main.cpp
src/app/: Pipeline.cpp  Pipeline.h
src/core/: DocumentLoader.cpp  DocumentLoader.h  FieldExtractor.cpp  FieldExtractor.h  LineUnwrapper.cpp  LineUnwrapper.h  OCRRunner.cpp  OCRRunner.h
src/io/: CSV.cpp  CSV.h  ConfigLoader.cpp  ConfigLoader.h  FileUtil.cpp  FileUtil.h  Logger.cpp  Logger.h
workspace/input_documents/case 001/: ocr_text.txt
